--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Baloo+2|Cinzel+Decorative|Permanent+Marker|Righteous|Spicy+Rice|Gloria+Hallelujah|El+Messiri|Aclonica|Delius+Swash+Caps|Frijole|Shojumaru&display=swap" rel="stylesheet">
+
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>TODO Application</title>
   </head>
   <body>
+  <style>
+    body{
+      background-image: url("https://media.istockphoto.com/vectors/todo-list-seamless-pattern-universal-background-vector-id509927696?k=6&m=509927696&s=170667a&w=0&h=5S8hmkgmbKi3fFdwjfGmtoLyPsAn3SJEgjbEeVmI_2w=");
+    }
+  </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
